[gd_scene load_steps=4 format=3 uid="uid://b46njlsv705gl"]

[ext_resource type="Script" uid="uid://bu2ul5jdjth1e" path="res://scenes/online_row.gd" id="1_fctas"]
[ext_resource type="Theme" uid="uid://cts0fwcuwbvl0" path="res://theme_default.tres" id="2_utsje"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_um2mj"]
content_margin_left = 0.0
content_margin_top = 0.0
content_margin_right = 0.0
content_margin_bottom = 0.0
bg_color = Color(0.147484, 0.133584, 0.141927, 0.768627)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.235294, 0.215686, 0.227451, 0.501961)
border_blend = true
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
shadow_color = Color(0.235294, 0.215686, 0.227451, 0.501961)

[node name="OnlineRow" type="Node2D"]
script = ExtResource("1_fctas")

[node name="Panel" type="Panel" parent="."]
offset_right = 1400.0
offset_bottom = 66.0
theme = ExtResource("2_utsje")
theme_override_styles/panel = SubResource("StyleBoxFlat_um2mj")

[node name="JoinButton" type="Button" parent="Panel"]
layout_mode = 0
offset_left = 14.0
offset_top = 15.0
offset_right = 166.0
offset_bottom = 51.0
theme = ExtResource("2_utsje")
text = "Join"

[node name="VSeparator" type="VSeparator" parent="Panel"]
layout_mode = 0
offset_left = 176.0
offset_top = 6.0
offset_right = 180.0
offset_bottom = 60.0

[node name="RoomName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 187.0
offset_top = 10.0
offset_right = 474.0
offset_bottom = 56.0
text = "Room Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator2" type="VSeparator" parent="Panel"]
layout_mode = 0
offset_left = 480.0
offset_top = 6.0
offset_right = 484.0
offset_bottom = 60.0

[node name="HostName" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 491.0
offset_top = 10.0
offset_right = 778.0
offset_bottom = 56.0
text = "Host Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator3" type="VSeparator" parent="Panel"]
layout_mode = 0
offset_left = 784.0
offset_top = 6.0
offset_right = 788.0
offset_bottom = 60.0

[node name="Ruleset" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 795.0
offset_top = 10.0
offset_right = 1082.0
offset_bottom = 56.0
text = "Ruleset"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VSeparator4" type="VSeparator" parent="Panel"]
layout_mode = 0
offset_left = 1088.0
offset_top = 6.0
offset_right = 1092.0
offset_bottom = 60.0

[node name="HasPassword" type="Label" parent="Panel"]
layout_mode = 0
offset_left = 1099.0
offset_top = 10.0
offset_right = 1386.0
offset_bottom = 56.0
text = "Has Password"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Panel/JoinButton" to="." method="_on_join_button_pressed"]
